==================== 2.15.91 ====================
2006-08-07  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.15.91

	* src/yelp-search-pager.c: 
	Remove translation of online URL in anticipation of a
	new script to do the redirection

2006-08-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-pager.c: 
	* src/yelp-toc-pager.c: 
	* src/yelp-window.c: 
	* src/yelp-search-pager.c: 
	Various misc. cleanups.
	- Keep track of idle functions and callbacks
	- don't use depreciated gtk_idle_add function
	Based on patch from Christian Persch
	
	* src/yelp-main.c: 
	Initialise dbus threading before gnome-vfs.  Bug #350079
	
2006-07-25  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Changed "Sound & Vision" to "Sound & Video"

2006-07-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/search2html.xsl: 
        Remove fixed font sizes from search results
        Remove fixed colours from search results
	Fixes bug #348563 and makes page respect
	theme setting
	

==================== 2.15.5 ====================

2006-07-24  Don Scorgie <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.15.5

2006-07-24  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	* stylesheets/search2html.xsl: 
	Add a new link to the search results to allow
	repeating the search online at the GNOME support forums
	Additionally: Allow better translation of the message
		      Allow translation of the site name
	Additionally (2): Allow online search locations to be
			  translated to point to support sites
			  in a native language
	
	
2006-07-23  Brent Smith  <gnome@nextreality.net>

	* configure.in: Depend on beagle 0.2.4 since that is the first version
	with the beagle_util_daemon_is_running() function.
	* src/yelp-search-pager.c: (search_pager_class_init):
	Use beagle_util_daemon_is_running() to make sure that the daemon is
	actually running, and the socket at ~/.beagle/socket is not stale.
	Fixes #348362
